Implementación de gestión de libros y servicios
Se ha añadido el espacio de nombres `Bilioteca.Models` y se ha importado `Microsoft.EntityFrameworkCore` en `ApplicationDbContext.cs`, modificando la clase para heredar de `DbContext` y definiendo un `DbSet<Book>`.

En `CatalogController.cs`, se ha añadido el servicio `CatalogService` y se ha implementado el método `GetAllBook`, eliminando métodos de creación, edición y eliminación de libros.

Se han realizado configuraciones en `Program.cs` y `appsettings.json` para establecer la conexión a la base de datos SQL Server.

Además, se ha actualizado `catalog.js` para realizar llamadas AJAX al nuevo método `GetAllBook`, y se ha creado la clase `Book` en `Book.cs` para definir las propiedades de un libro.

Finalmente, se ha añadido `ServiceRegistration.cs` para registrar servicios, incluyendo `CatalogService`.

--- a/Bilioteca/appsettings.json
+++ b/Bilioteca/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Conexion": "server=FERNANDO\\SQLEXPRESS;database=Biblioteca;Trusted_Connection=True;"
+  }
 }
