Mejoras en la gestión de libros y configuración de DB
Se ha añadido el uso de Entity Framework Core en `CatalogService.cs` y se ha actualizado el método `GetAllBook` para utilizar un procedimiento almacenado. Se han eliminado filas de ejemplo en `Index.cshtml` para permitir la carga dinámica de datos. La cadena de conexión en `appsettings.json` se ha modificado para incluir `TrustServerCertificate=True;`. Además, se ha actualizado la configuración de DataTables en `catalog.js` para manejar nuevas columnas y ocultar algunas de ellas.

--- a/Bilioteca/appsettings.json
+++ b/Bilioteca/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Conexion": "server=FERNANDO\\SQLEXPRESS;database=Biblioteca;Trusted_Connection=True;"
+    "Conexion": "Server=FERNANDO\\SQLEXPRESS;Database=Biblioteca;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
